--- a/dfu-prediction/src/index.css
+++ b/dfu-prediction/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.bg-white\/90 {
+    background-color: rgb(255 255 255 / 41%);
+}
+.bg-white\/80 {
+    background-color: rgb(255 255 255 / 26%);
+}
